feat(sql4j): enhance database migration and add L2 cache tests with aggregation features